src/test/ui/codemap_tests/issue-28308.stderr
error[E0600]: cannot apply unary operator `!` to type `&'static str`
  --> $DIR/issue-28308.rs:2:5
   |
LL |     assert!("foo");
   |     ^^^^^^^^^^^^^^ cannot apply unary operator `!`
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0600`.
